--- a/AspNetCoreToDo/Views/Todo/Index.cshtml
+++ b/AspNetCoreToDo/Views/Todo/Index.cshtml
@@ -21,7 +21,10 @@
         {
             <tr>
                 <td>
-                    <input type="checkbox" class="done-checkbox">
+                    <form asp-action="MarkDone" method="POST">
+                        <input type="checkbox" class="done-checkbox">
+                        <input type="hidden" name="id" value="@item.Id">
+                    </form>
                 </td>
                 <td>@item.Title</td>
                 <td>@item.Status</td>
@@ -32,5 +35,6 @@
 
     <div class="panel-footer add-item-form">
         <!-- TODO: Add item form -->
+        @await Html.PartialAsync("AddItemPartial", new TodoItem());
     </div>
 </div>
